# common

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.js  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: continuous_integration.yml  releases.yml  tests.yml
src/emma_common/: __init__.py  _version.py  gunicorn.py  hf.py  logging.py
src/emma_common/api/: gunicorn.py  instrumentation.py  response.py
src/emma_common/aws/: cloudwatch.py  ec2.py  opensearch.py  secrets.py
src/emma_common/datamodels/: __init__.py  features.py  state.py  torch.py
tests/: conftest.py
tests/datamodels/: test_feature_datamodels.py
